<resources>
    <string name="app_name">Aplikasi Kehadiran</string>
    <string name="title">Absensi Pegawai BKPSDMD</string>
    <string name="email">Email pegawai</string>
    <string name="password">Password pegawai</string>
    <string name="name">Nama pegawai</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="temp_register">Daftar sementara</string>
    <string name="form_login">Halaman Login</string>
    <string name="form_register">Halaman Daftar Pegawai</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_about">About</string>
    <string name="title_write">Write</string>
    <string name="admin">Halaman Admin</string>
    <string name="user">Pengguna : </string>
    <string name="tanggal">Tanggal :</string>
    <string name="presencePart">Bagian Absen :</string>
    <string name="profilepic">Foto Profil</string>
    <string name="users">Pengguna</string>
    <string name="Presence">Absen</string>
    <string name="senddata">Kirim Absen</string>
    <string name="createuser">Daftar User</string>
    <string name="forgotpassword">Lupa Password</string>
    <string name="resetpass">Pass Baru</string>
    <string name="sendpass">Rubah Password</string>
    <string name="arrive">Jam Absen</string>
</resources>