<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sendpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/sendpass"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/btnone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:text="@string/email"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/resetpass"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/pass"
        android:hint="@string/resetpass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="pass"
        android:inputType="textPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>